--- a/forecasts/forecast-fx.qmd
+++ b/forecasts/forecast-fx.qmd
@@ -17,7 +17,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-## Результаты опроса: март 2025 г.
+## Результаты опроса: апрель 2025 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(kableExtra)
@@ -42,11 +42,13 @@ df %>%
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
-Планы по увеличению добычи нефти в странах ОПЕК+ и ожидания замедления мировой экономики от импортных тарифов США привели к снижению прогнозов аналитиков по ценам на нефть Brent до 73 долл./барр. к концу 2025 г. На российские цены на нефть будет дополнительно оказывать влияет расширение дисконтов с начала 2025 г. Консенсус-прогноз налоговой цены на нефть в 2025 г. – 63,7 долл./барр., что выше «бюджетного правила» 60 долл./барр., но ниже бюджетных планов 69,7 долл./барр.
+Фактический масштаб введенных в апреле импортных пошлин США и ответных мер на них со стороны торговых партнеров оказался больше ожиданий. Прогнозы аналитиков по цене на нефть марки Brent в 2025 г. были пересмотрены вниз до 70 долл./барр., с учетом дисконта налоговая цена на российскую нефть ожидается на уровне 58 долл./барр. Это ниже как бюджетных планов - 69,7 долл./барр., так и «бюджетного правила» - 60 долл./барр.
 
-В марте укрепление курса рубля продолжилось, но (вероятно из-за снижения цен на нефть) среди аналитиков преобладают ожидания, что укрепление временное, и к концу года рубль ослабнет к 97,3 руб./долл. Диапазон прогнозов остается высоким – от 90 до 104 руб./долл. к концу года.
+Сохраняются преобладающие ожидания ослабления курса рубля к концу года – до 95 руб./долл. 
 
-После заседания Банка России 21 марта консенсус-прогноз аналитиков предполагает возможность более раннего начала снижения ключевой ставки – со 2 кв. 2025 г., но более медленного с достижением 18% к концу года – аналогично консенсус-прогнозу в феврале.
+Наблюдаемые в данных снижение инфляции и отдельные признаки замедления экономической активности находят отражение в прогнозах аналитиков. Ожидаемая инфляция на конец года снижается (с 7% до 6,8%), как и ожидаемая ключевая ставка (с 18% до 17%).
+
+Темпы роста ВВП в 2025 г., несмотря на снижение цен на нефть и отдельные признаки замедления экономической активности, остаются на уровне 1,5%.
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
