--- a/forecasts/forecast-real-estate.qmd
+++ b/forecasts/forecast-real-estate.qmd
@@ -17,7 +17,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-## Результаты опроса: ноябрь 2024 г.
+## Результаты опроса: апрель 2025 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(kableExtra)
@@ -41,13 +41,9 @@ df %>%
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
-ЦЦИ представляет первый консенсус-прогноз ключевых показателей рынка коммерческой недвижимости Санкт-Петербурга. Он показал, что ожидаются сравнительно низкие темпы роста арендных ставок на складском рынке региона и высокие темпы роста на офисном рынке.
+Консенсус-прогноз по росту ставок аренды на складском рынке московского региона пересмотрен вниз, а по вакантности – вверх. При этом расхождения в ожиданиях достаточно существенны и определяются тем, как сильно охладит спрос высокая ключевая ставка Банка России, и как отреагируют девелоперы в 2026 г. на ее понижение – уменьшением или сохранением ставок аренды.
 
-Никто из участников консенсуса не ожидает роста вакантности на офисном рынке Санкт-Петербурга в 2026 г.
-
-Впервые консенсус-прогноз по росту ставок аренды на складском рынке московского региона пересмотрен вниз – в отношении 2026 г. Основной причиной этого является ожидаемое замедление спроса, в частности со стороны онлайн-ритейлеров. Компании из других сегментов пока не могут полноценно поддержать текущий уровень арендных ставок.
-
-Ожидания по росту доли свободных площадей в московских офисах класса А сместились с 2025 г. на 2026 г.
+Доля свободных офисных площадей класса А в Москве ожидается неизменной в 2026-2027 гг. Ожидания по динамике ставок аренды на офисы сместились вверх.
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
@@ -71,7 +67,7 @@ df_last$date <- as.Date(df_last$date)
 df_last$index = 'Среднее'
 df_prev <- df_prev %>% pivot_longer(!index, names_to = "date", values_to = 'value')
 df_prev$date <- as.Date(df_prev$date)
-df_prev$index = 'Среднее, (от ноября 2024)'
+df_prev$index = 'Среднее, (от февраля 2025)'
 df_range <- df_range %>% pivot_longer(-X1, names_to = "date", values_to = 'value')
 df_range$date <- as.Date(df_range$date)
 
