--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,7 @@ format:
       sidebar-width: 350px
 ---
 
-::::::::::::::::::::::::::::::::::::::::::: grid
+:::::::::::::::::::::::::::::::::::::::::::::: grid
 :::: {.g-col-12 .full-width-container}
 ![](fig/cci-blur.png)
 
@@ -40,8 +40,8 @@ format:
 
 <!-- All banners in one container -->
 
-:::::::::::::::::::::::::::::::::::: g-col-12
-::::::::::::::::::::::::::::::::::: hero-banners-container
+:::::::::::::::::::::::::::::::::::::: g-col-12
+::::::::::::::::::::::::::::::::::::: hero-banners-container
 :::: hero-banner
 ![](images/icon-oil.svg)
 
@@ -50,13 +50,13 @@ format:
 
 <p class="hero-banner-date">
 
-23.04.2025
+30.04.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Цены на российскую нефть перешли к росту
+Экспорт российской нефти в Индию в апреле 2025 г. может побить рекорд
 
 </p>
 :::
@@ -70,13 +70,13 @@ format:
 
 <p class="hero-banner-date">
 
-23.04.2025
+30.04.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Бензиновый рынок готов к весеннему вызову
+Дизель замер в ожидании новых решений США и Китая
 
 </p>
 :::
@@ -116,7 +116,7 @@ format:
 
 <p class="hero-banner-caption">
 
-Праздники в Китае немного оживили рынок 
+Праздники в Китае немного оживили рынок
 
 </p>
 :::
@@ -182,7 +182,6 @@ format:
 :::
 ::::
 
-
 :::: hero-banner
 ![](images/icon-wheat.svg)
 
@@ -191,13 +190,13 @@ format:
 
 <p class="hero-banner-date">
 
-28.04.2025
+05.05.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Индия запаслась пшеницей, Китай – уронил импорт
+Российская пшеница закрепилась во Вьетнаме
 
 </p>
 :::
@@ -251,13 +250,13 @@ format:
 
 <p class="hero-banner-date">
 
-31.03.2025
+30.04.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Ставки на полувагоны обвалились под натиском дешёвого угля
+Полувагоны оказались в заложниках угольных цен
 
 </p>
 :::
@@ -291,14 +290,13 @@ format:
 
 <p class="hero-banner-date">
 
-15.04.2025
+29.04.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Конкуренция за перевозку нефти восстановила российский экспорт
-
+Конкуренция среди перевозчиков нефти сдерживает рост ставок
 
 </p>
 :::
@@ -312,13 +310,13 @@ format:
 
 <p class="hero-banner-date">
 
-22.04.2025
+29.04.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Российские нефтепродукты нашли новые маршруты
+Россия и Сенегал укрепляют торговое партнерство
 
 </p>
 :::
@@ -383,14 +381,14 @@ format:
 </p>
 :::
 ::::
-:::::::::::::::::::::::::::::::::::
-::::::::::::::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::
+::::::::::::::::::::::::::::::::::::::
 
-::: {.g-col-12}
+::: g-col-12
 ### Актуальное
 :::
 
-::: {.g-col-6}
+::: g-col-6
 15 апреля 2025. **ЦЦИ начал публиковать индексы на хопперы-зерновозы**
 
 [Пресс-релиз →](events/2025-04-15-railways-wheat-van.qmd)
@@ -408,7 +406,7 @@ format:
 [Мониторинг февраль -\>](reports/2025-02%20Сырьевой%20индекс%20ЦЦИ.pdf)
 :::
 
-::: {.g-col-6}
+::: g-col-6
 7 февраля 2025. **Пятница с ЦЦИ: логистика**
 
 [Материалы →](events/2025-02-07-logistics.qmd)
@@ -426,7 +424,7 @@ format:
 [Пресс-релиз →](events/2025-01-30-Macro-consensus.qmd)
 :::
 
-::: {.g-col-12}
+::: g-col-12
 ### Сырьевой индекс ЦЦИ [→](pbc-index.qmd)
 
 -- сводный индекс цен российского сырьевого экспорта. Отражает изменение цен на товары российского сырьевого экспорта по сравнению с уровнем января 2022 г.
@@ -537,4 +535,4 @@ index_plot
 
 ```
 :::
-:::::::::::::::::::::::::::::::::::::::::::
+::::::::::::::::::::::::::::::::::::::::::::::
