--- a/markets/freight-crude.qmd
+++ b/markets/freight-crude.qmd
@@ -17,6 +17,16 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*29.04.2025 Морская логистика. Нефть*
+
+**Конкуренция среди перевозчиков нефти сдерживает рост ставок**
+
+Широкая доступность свободного тоннажа на рынке перевозок российской нефти сдерживает рост фрахтовых ставок.
+
+Экспорт российской нефти с Балтики вырос на 15,5% н/н, а ставки Aframax до Индии и Китая не изменились.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *22.04.2025 Морская логистика. Нефть*
 
 **Конкуренция за перевозку нефти восстановила российский экспорт**
@@ -37,15 +47,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*08.04.2025 Морская логистика. Нефть*
-
-**Конкуренция за перевозку нефти снижает фрахт**
-
-Закрытие причалов на терминале Каспийского трубопроводного консорциума в Черном море привело к увеличению предложения Suezmax в регионе и падению ставок до Индии и Китая на 4-5% н/н.
-
-Остановка деятельности причала в порту Новороссийск не повлияла на экспорт российской нефти. Перевалка в российских портов снизилась на 2,3% н/н из-за отсутствия отгрузок в Мурманске и Пригородном (Сахалинская область).
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
