--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -23,35 +23,25 @@ format:
 
 Неделя до начала государственных праздников в Китае принесла небольшое оживление на рынок. Выходные дни по случаю Дня труда, которые продлятся в КНР с 1 по 5 мая, ожидаемо снизят торговую активность до середины следующей недели.   
 
-- Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 115 долл./т CFR China.
-- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 111-113 долл./т CFR China.
-- Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 75 долл./т CFR China.
+![](../images/icon-locker.svg){width="6%"}
+[Подробнее](../demo-subscription.qmd)
 
-![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
-
-*23.04.2025* Уголь
+*21.04.2025* Уголь
 
 **Цены всё ниже, спроса не видно**
 
 Низкий спрос на металлургический уголь не позволяет части российских экспортеров реализовать свои ценовые предложения на уровне 130 долл./т. Недавняя реализация коксующегося угля жирных марок по цене 132 долл./т CFR India с поставкой судном типа Panamax, согласно мнению участников рынка, не будет отражать рыночный уровень в среднесрочной перспективе, т.к. низкий спрос ожидается до конца 3 кв. 2025 г.
 
--   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 105-110 долл./т CFR China.
--   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 107-110 долл./т CFR China, 119-120 долл./т CFR Indonesia, 120-122 долл./т CFR Malaysia.
--   Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 75 долл./т CFR China.
-
 ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+
 
 *14.04.2025* Уголь
 
 **Неопределенность на рынке растет**
 
 Торговые противостояния, низкие цены и профицит предложения угля внесли еще большую неопределенность на рынок. Укрепление рубля оставляет экспортные нетбэки на энергетический уголь отрицательными.
-
--   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 105-110 долл./т CFR China.
--   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 110-114 долл./т CFR China, 120 долл./т CFR Indonesia.
--   Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 75 долл./т CFR China.
-
-![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+![](../images/icon-locker.svg){width="6%"}
+[Подробнее](../demo-subscription.qmd)
 
 *07.04.2025* Уголь
 
@@ -59,41 +49,8 @@ format:
 
 Отрицательный экспортный нетбэк на энергетические угли калорийностью 5500 ккал/кг и ниже привел к желанию ряда поставщиков приостановить экспортные поставки. Участники рынка надеются на стабилизацию цен после длительного снижения.
 
--   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 105-108 долл./т CFR China.
--   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 110-115 долл./т CFR China, 130 долл./т CFR India.
--   Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 75 долл./т CFR China.
-
-![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
-
-*31.03.2025* Уголь
-
-**Уголь не хочет продаваться по низким ценам**
-
-Низкие цены на уголь препятствуют заключению новых сделок на рынке спот. Некоторые участники рынка предпочитают продавать «точечно» для клиентов на альтернативных рынках Юго-Восточной Азии, избегая крупных поставок в Китай.
-
--   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 105-108 долл./т CFR China, 110 долл./т CFR Vietnam.
--   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 110-111 долл./т CFR China, 130 долл./т CFR India, 133 долл./т CFR Indonesia.
--   Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 75 долл./т CFR China.
-
-![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
-
-*24.03.2025* Уголь **Рынок ищет спрос на уголь**
-
-Опрошенные участники рынка отмечают отсутствие спроса на рынке спот и сложности в формировании цены при текущей конъюнктуре. - Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 112-114 долл./т CFR China. - Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 111-114 долл./т CFR China. - Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 75 долл./т CFR China.
-
-![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
-
-*17.03.2025* Уголь
-
-**Поддержки ценам не видно**
-
-Экспортные цены на энергетический уголь получили временную передышку, однако факторы давления остаются. Спрос на металлургический уголь остается ограниченным, цены двигаются вниз.
-
--   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 112-114 долл./т CFR China.
--   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 111-115 долл./т CFR China.
--   Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 77 долл./т CFR China.
-
-![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+![](../images/icon-locker.svg){width="6%"}
+[Подробнее](../demo-subscription.qmd)
 
 ### События
 
