--- a/markets/markets-oil-products.qmd
+++ b/markets/markets-oil-products.qmd
@@ -16,6 +16,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*30.04.2025 Дизель*
+
+**Дизель замер в ожидании новых решений США и Китая**
+
+Дисконты на дизельное топливо (ДТ) сохранили значения позапрошлой недели на фоне неопределенности в торговых взаимоотношениях на международной арене. 
+
+ФАС России внесла проект приказа о росте тарифа на транспортировку ДТ по отдельным маршрутам.
+
+Основным пунктом назначения морского экспорта ДТ за первые 3 недели апреля 2025 г. стала Турция.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *23.04.2025 Бензин*
 
 **Бензиновый рынок готов к весеннему вызову**
@@ -36,15 +48,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*09.04.2025 Бензин*
-
-**Цены на бензин в мире падают, а в России стабильны**
-
-Новые пошлины США, объявленные 2 апреля, и новость о внеплановом увеличении добычи привели к обвалу мировых цен на нефтепродукты.
-
-Внутренние цены на нефтепродукты остаются стабильными из-за высокого предложения, отсутствия аварий и выхода НПЗ из ремонтов.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 :::
 
