--- a/markets/markets-oil.qmd
+++ b/markets/markets-oil.qmd
@@ -16,14 +16,25 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*30.04.2025 Нефть*
+
+**Экспорт российской нефти в Индию в апреле 2025 г. может побить рекорд**
+
+Рост цены dated Brent компенсировал расширение дисконта на нефть Urals, и средняя цена российской нефти сохранилась на уровне чуть менее 55 долл./барр.
+
+Цена на нефть ESPO подросла примерно на 1 долл./барр. н/н, но не смогла пробить отметку в 64 долл./барр.
+
+Цена на нефть Urals менее 60 долл./барр. привлекает индийских покупателей. По итогам апреля 2025 г. ожидаются рекордные за 1,5-2 года поставки этой нефти в Индию.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *23.04.2025 Нефть*
 
 **Цены на российскую нефть перешли к росту**
 
-На прошлой неделе введение ограничений США против нефтяных поставок иранской нефти и китайского НПЗ взбодрило нефтяной рынок и привело к росту мировых цен на нефть. По итогам недели средняя стоимость dated Brent выросла на 2 долл./барр. н/н и превысила отметку в 67 долл./барр. 
+На прошлой неделе введение ограничений США против нефтяных поставок иранской нефти и китайского НПЗ взбодрило нефтяной рынок и привело к росту мировых цен на нефть. По итогам недели средняя стоимость dated Brent выросла на 2 долл./барр. н/н и превысила отметку в 67 долл./барр.
 
 Снижение фрахтовых ставок на перевозку российской нефти способствовало увеличению экспорта нефти Urals примерно на треть, а также сужению дисконта на нее почти на 1 долл./барр. н/н. Дисконт на ESPO откорректировался в сторону расширения примерно на 0,6 долл./барр. н/н после сужения неделей ранее на 1,4 долл./барр. н/н.
-
 
 *16.04.2025 Нефть*
 
@@ -34,19 +45,6 @@ format:
 В условиях сокращения предложения российской нефти участники рынка ожидают сужения дисконта на Urals на 1-1,5 долл./барр. Дисконт на ESPO сузился почти на треть.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*09.04.2025 Нефть*
-
-**ОПЕК+ и США обрушили нефтяной рынок**
-
-Одновременное введение США глобальных импортных пошлин и дополнительное увеличение добычи нефти странами ОПЕК+ обвалили цены на мировые сорта нефти на \~10 долл./барр. В понедельник 7 апреля 2025 г. цена dated Brent опустилась до 66,9 долл./барр. (-10,5 долл./барр. н/н), а нефть Urals, цена которой зависит от этого бенчмарка, в российских портах торговалась ниже 54 долл./барр.
-
-По итогам прошлой недели средняя цена dated Brent составила 74,7 долл./барр., а цена на нефть Urals была выше 60 долл./барр.
-
-По итогам марта 2025 г. экспорт российской нефти вырос на 5,1% м/м и превысил средние объемы первых двух месяцев года. В географию стран, принимающих российскую нефть, добавились Шри-Ланка и Сирия.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
