--- a/markets/markets-railways-van.qmd
+++ b/markets/markets-railways-van.qmd
@@ -17,6 +17,17 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*30.04.2025*
+
+**Полувагоны оказались в заложниках угольных цен**
+
+-   Ставки предоставления полувагонов под перевозку угля по маршруту Кузбасс– Находка в апреле упали на 10-12% к ставкам марта.
+-   На фоне минимального спроса на типовые полувагоны ставки их долгосрочной аренды опустились ниже 2 тыс. руб./ваг.-сут.
+-   Средняя расчётная доходность оперирования типовыми полувагонами на маршрутах экспорта угля рухнула в апреле до 1 773 руб./ваг.-сут., инновационными– до 2 565 руб./ваг.-сут.
+-   При сохранении текущего валютного курса и цен на уголь экспорт энергетического угля из Кузбасса в апреле-мае не станет рентабельным, даже если операторы будут предоставлять вагоны под перевозку бесплатно (с нулевой доходностью).
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *31.03.2025*
 
 **Ставки на полувагоны обвалились под натиском дешёвого угля**
@@ -41,15 +52,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*30.01.2025*
-
-**Полувагоны с углём активнее поехали на Запад несмотря на удорожание перевозок**
-
--   По итогам двухступенчатой индексации железнодорожного тарифа на порожний пробег полувагонов операторы пересмотрели ставки их предоставления. В январе ставка предоставления типового полувагона на маршрут Кузбасс - Находка достигла 160,5 тыс. руб. без НДС (+7% г/г).
--   Рост ставок на полувагоны отстаёт от индексации тарифа РЖД: операторы теряют в доходности оперирования подвижным составом.
--   За счёт увеличения экспорта угля через порты Юга и Запада его погрузка на сети РЖД в декабре-январе впервые за последние 1,5 года выросла в годовом выражении.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
