--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -17,18 +17,29 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*05.05.2025 Пшеница*
+
+**Российская пшеница закрепилась во Вьетнаме**
+
+Экспортные цены на пшеницу снизились на 1 долл. по сравнению с прошлой неделей.
+
+Россия в 1,5 раза нарастила поставки пшеницы во Вьетнам до 136 тыс. т в январе-марте 2025 г. 
+
+Канада может снизить производство твердой пшеницы в 2025/26 г. на 0,5 млн т до 5,4 млн т. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *28.04.2025 Пшеница*
 
 **Индия запаслась пшеницей, Китай – уронил импорт**
 
 Экспортные цены на пшеницу остались на уровне прошлой недели.
 
-Китай планирует производить 753 млн т зерна в 2034 г. 
+Китай планирует производить 753 млн т зерна в 2034 г.
 
-Запасы пшеницы в Индии на трехлетнем максимуме  - 11,8 млн т. 
+Запасы пшеницы в Индии на трехлетнем максимуме - 11,8 млн т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *21.04.2025 Пшеница*
 
@@ -75,18 +86,6 @@ format:
 Марокко продлило текущую программу субсидий на импорт мягкой пшеницы до 31 декабря 2025 г.
 
 Грузия продлила действие импортной пошлины на муку, ячмень и отруби из России.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*24.03.2025 Пшеница*
-
-**Турция дала «зеленый свет» импортной пшенице**
-
-Экспортные цены на пшеницу выросли на 3 долл. по сравнению с прошлой неделей.
-
-Турция сняла ограничения на импорт пшеницы для мукомолов.
-
-Для Казахстана введен временный запрет на экспорт (кроме транзита) пшеницы, чечевицы и семян масличного льна в Россию.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
