--- a/markets/freight-products.qmd
+++ b/markets/freight-products.qmd
@@ -17,6 +17,19 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*29.04.2025 Морская логистика. Нефтепродукты*
+
+**Россия и Сенегал укрепляют торговое партнерство**
+
+Ставки на перевозку светлых нефтепродуктов в направлении Западной Африки снизились на 1,7 долл./т н/н. 
+
+Возобновление поставок темных нефтепродуктов в Индию обусловило рост стоимости фрахта по маршруту Черное море – Индия/Ближний Восток на 0,8 долл./т н/н. 
+
+Среднемесячный экспорт светлых нефтепродуктов в Сенегал за январь-апрель 2025 г. вырос на 19% г/г.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 *22.04.2025 Морская логистика. Нефтепродукты*
 
 **Российские нефтепродукты нашли новые маршруты**
