--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -117,11 +117,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Сырьевого индекса ЦЦИ к предыдущей неделе: [+1,5 п.]{.my-custom-class style="color:#44bf78;"}** ([**-4,1 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
+**Изменение Сырьевого индекса ЦЦИ к предыдущей неделе: [0,0 п.]{.my-custom-class style="color:44bf78;"}** ([**-4,8 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: нефтm [**+4,4%**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**+4,1%**]{.my-custom-class style="color:#44bf78;"}
+Наибольшие изменения цен товаров за неделю: нефть [**+0,8%**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**-1,7%**]{.my-custom-class style="color:#f6514c;"}
 
-Наибольшие вклады в изменение Индекса за неделю: нефть [**-2,1 п.**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-1,2 п.**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие вклады в изменение Индекса за неделю: нефть [**-3,0 п.**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-1,2 п.**]{.my-custom-class style="color:#f6514c;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
